--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "next": "latest",
+    "next-auth": "^4.19.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
