--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "amazon-cognito-identity-js": "^6.1.2",
     "next": "latest",
     "next-auth": "^4.19.2",
     "react": "^18.2.0",
