--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "next-auth": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/uuid": "^9.0.1",
     "postcss-preset-env": "^8.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.8.3"
