--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
