--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@next/font": "^13.1.6",
     "amazon-cognito-identity-js": "^6.1.2",
     "next": "latest",
