--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
   },
