--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "^13.1.6",
     "amazon-cognito-identity-js": "^6.1.2",
+    "i18next": "^22.4.11",
+    "i18next-browser-languagedetector": "^7.0.1",
     "next": "latest",
     "next-auth": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "uuid": "^9.0.0",
