--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/uuid": "^9.0.1",
     "postcss-preset-env": "^8.0.0",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-brand-colors": "^0.3.3",
+    "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^4.8.3"
   }
 }
