--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "jest.config.js",
+    "public/locales/resources.js"
   ],
   "exclude": [
     "node_modules"
