--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "node utils/createAwsExports.mjs && next build",
+    "build": "node createAwsExports.mjs && next build",
     "start": "next start",
     "test": "jest --config=jest.config.js",
     "type-check": "tsc"
